# Learn2Rot

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  _version.py  addon.json  budget.py  config.json  config.md  config.py  config_dialog.py  consts.py  dock.py  fetch_vendor.py  hooks.py  logger.py  main.py  manifest.json  media_control.py  menubar_budget.py  menubar_helper.py  meta.json  metadata.py  overlay.py  package.py  persistence.py  player_bridge.py  pyproject.toml  queue.py  requirements-common.txt  requirements-darwin.txt  requirements-win32.txt  requirements.txt  sync_credit.py  utils.py  vendor_paths.py  watch_daemon.py  watch_helper.py  watch_state.py  widgets.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: description.md
tests/: addon_loader.py  conftest.py  test_budget.py  test_config.py  test_media_control.py  test_menubar_budget.py  test_overlay.py  test_persistence.py  test_sync_credit.py  test_utils.py  test_vendor_paths.py  test_watch_daemon.py  test_watch_helper.py  test_watch_state.py
web/: player.html
