[project]
name = "learn2rot"
version = "0.6.0"
description = "Anki add-on that lets you earn screen time by doing your flashcards"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymunk>=7.0,<8",
    "pystray>=0.19.0 ; sys_platform == 'win32'",
    "pytest>=8.0",
    "rumps>=0.4.0 ; sys_platform == 'darwin'",
    "winrt-runtime>=3.0 ; sys_platform == 'win32'",
    "winrt-windows-foundation>=3.0 ; sys_platform == 'win32'",
    "winrt-windows-foundation-collections>=3.0 ; sys_platform == 'win32'",
    "winrt-windows-media-control>=3.0 ; sys_platform == 'win32'",
]
